[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.84"
edition = "2021"
authors = ["Riccardo Fagiolo"]
license = "MIT"
categories = ["simulators"]
keywords = ["SPICE", "simulation", "circuit"]
readme = "README.md"
publish = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
debug = true
